Updating WDL and Docker files -- separating workflow and tasks and adding files necessary for building Docker image

--- a/analysis.html
+++ b/analysis.html
@@ -1104,7 +1104,7 @@ body label {
             <div class="_src_components_DesktopAnalysis_DesktopAnalysis_module__qScores">Q Scores</div>
             <div class="_qscores_plot">
               <div id="qscores"></div>
-              <script src="scripts/plots.js"></script>
+              <script src="scripts/javascript/plots.js"></script>
             </div> 
             <div class="_src_components_DesktopAnalysis_DesktopAnalysis_module__line42">
               <svg preserveAspectRatio="none" viewBox="0 0 511 1" fill="none" xmlns="http://www.w3.org/2000/svg" class="_src_components_DesktopAnalysis_DesktopAnalysis_module__icon2"><path d="M0 0L510.372 0" stroke="#DFE1E5"></path></svg>
